Backend/Day38/nesting.txt
college> db.student.insertOne({name: "Trisha", performance: {marks: 98, grade: "A"}})
{
  acknowledged: true,
  insertedId: ObjectId('659fa1464eff337cb5088a98')
}
college> db.student.find()
[
  {
    _id: ObjectId('6591027de0e3afab76b1afa7'),
    name: 'Barun',
    age: 21,
    marks: 88
  },
  {
    _id: ObjectId('65910974e0e3afab76b1afa8'),
    name: 'Soumitri',
    marks: 87,
    city: 'Berhampur'
  },
  {
    _id: ObjectId('65913d3f068bf90db78b992a'),
    name: 'Sangeeta',
    marks: 96,
    city: 'Bhubaneshwar'
  },
  {
    _id: ObjectId('65913d3f068bf90db78b992b'),
    name: 'Barkha',
    marks: 76,
    city: 'Rourkela'
  },
  {
    _id: ObjectId('659fa1464eff337cb5088a98'),
    name: 'Trisha',
    performance: { marks: 98, grade: 'A' }
  }
]
college> db.student.find({performance.marks: 98})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:28)

> 1 | db.student.find({performance.marks: 98})
    |                             ^
  2 |

college> db.student.find({"performance.marks": 98})
[
  {
    _id: ObjectId('659fa1464eff337cb5088a98'),
    name: 'Trisha',
    performance: { marks: 98, grade: 'A' }
  }
]
college>